edited the font size for btn-lg

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
  	<!-- start course section -->
  	<div id="course" class="offset">
- 		
+ 		<div class="col-12 narrow text-center">
+ 			<h1>Nuno Theme Advanced  Bootstrap Course</h1>
+ 		</div>
  	</div>
  	<!-- end course section-->
 
