--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1">
-	<link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<title>Nuno - Responsive Bootstrap THeme</title>
 	<link rel="stylesheet" type="text/css" href="css/fixed.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
  </head>
- <body data-spy="scroll" data-target="#navbarResponsive">
+ <body data-spy="scroll" data-target="#navbarResponsive" data-offset="1">
 
  	<!-- start home section -->
  	<div id="home">
@@ -18,7 +18,7 @@
  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
  				<span class="navbar-toggler-icon"></span>
  			</button>
- 			<div id="navbarResponsive" class="collapse navbar-collapse">
+ 			<div id="navbarResponssive" class="collapse navbar-collapse">
  				<ul class="navbar-nav ml-auto">
  					<li class="nav-item">
  						<a href="#" class="nav-link">HOME</a>
@@ -133,14 +133,15 @@
   	<div id="contact" class="offset">
  	
  	</div>
-  	<!-- end of Contact section -->
+	  	<!-- end of Contact section -->
 
 
 
     <!--script source files  -->
- 	<script src="js/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <script src="https://kit.fontawesome.com/10155896e6.js"></script>
     <!-- end of script source files -->
  </body>
