--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
  	<!-- start feature section -->
  	<div id="features" class="offset">
  		<div class="jumbotron">
- 			<div class="narrow">
+ 			<div class="narrow text-center">
  				<div class="col-12">
  					<h3 class="heading">Features</h3>
  					<div class="heading-underline"></div>
@@ -119,19 +119,118 @@
 
   	<!-- start Resources section -->
   	<div id="resources" class="offset">
- 	
+  		<div class="fixed-background">
+  			<div class="row dark text-center">
+  				<div class="col-12">
+  					<h3 class="heading">Built with Care</h3>
+  					<div class="heading-underline"></div>
+  				</div>
+
+  				<div class="col-md-4">
+  					<h3>HTML 5</h3>
+  					<div class="feature">
+  						<i class="fas fa-code fa-3x"></i>
+  					</div>
+  					<p class="lead">Built with the latest, HTML 5.</p>
+  				</div>
+
+  				<div class="col-md-4">
+  					<h3>BOOTSTRAP 4</h3>
+  					<div class="feature">
+  						<i class="fas fa-bold fa-3x"></i>
+  					</div>
+  					<p class="lead">Built with the latest, BOOTSTRAP 4.</p>
+  				</div>
+
+  				<div class="col-md-4">
+  					<h3> CSS 3</h3>
+  					<div class="feature">
+  						<i class="fab fa-css3 fa-3x"></i>
+  					</div>
+  					<p class="lead">Built with the latest, CSS 3</p>
+  				</div>
+
+  			</div>
+  			<div class="fixed-wrap">
+  				<div class="fixed">
+  					
+  				</div>
+  			</div>
+  		</div>
  	</div>
   	<!-- end of Resources section -->
 
   	<!-- start Clients section -->
   	<div id="clients" class="offset">
- 	
+  		<div class="jumbotron">
+  			<div class="col-12 text-center">
+  					<h3 class="heading">Clients</h3>
+  					<div class="heading-underline"></div>
+  			</div>
+
+  			<div class="row">
+  			<div class="col-md-6 clients">
+  				<div class="row">
+  					<div class="col-md-4">
+  						<img src="img/client1.png" alt="">
+  					</div>
+
+  					<div class="col-md-8">
+  						<blockquote>
+  							<i class="fas fa-quote-left"></i>
+  							I see Nuno support as more of a partner to my company than a resource. I can pick up the phone and talk to anyone at anytime and the way they interact with us a business makes it really simple
+  							<hr class="clients-hr">
+  							<cite>&#8212; Eric, Small Businees Owner</cite>
+  						</blockquote>
+  					</div>
+  				</div>
+  			</div>
+
+  			<div class="col-md-6 clients">
+  				<div class="row">
+  					<div class="col-md-4">
+  						<img src="img/client2.png" alt="">
+  					</div>
+
+  					<div class="col-md-8">
+  						<blockquote>
+  							<i class="fas fa-quote-left"></i>
+  							I see Nuno support as more of a partner to my company than a resource. I can pick up the phone and talk to anyone at anytime and the way they interact with us a business makes it really simple
+  							<hr class="clients-hr">
+  							<cite>&#8212; Rachael, Professional Photographer</cite>
+  						</blockquote>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+
+  		</div>
+
+  		<div class="col-12 narrow text-center">
+  			<p class="lead">Want to learn more about developing Bootstrap themes</p>
+  			<a href="#" class="btn btn-md btn-secondary">Bootsrap Course</a>
+  		</div>
  	</div>
+
   	<!-- end of Clients section -->
 
   	<!-- start Contact section -->
   	<div id="contact" class="offset">
- 	
+  		<footer>
+  			<div class="row justify-content-center">
+  				<div class="col-md-5 text-center">
+  					<img src="img/nuno.png" alt="">
+  					<p>At our core is collection of design and development solutions that represents everything your business needs to compete in the modern marketplace</p>
+  					<strong>Contact Info</strong>
+  					<p>(888) 888-8888<br>email@nuno.com</p>
+  					<a href="" target="blank"><i class="fab fa-2x fa-facebook"></i></a>
+  					<a href="" target="blank"><i class="fab fa-2x fa-twitter"></i></a>
+  					<a href="" target="blank"><i class="fab fa-2x fa-instagram"></i></a>
+  				</div>
+  				<hr class="socket">
+  				&copy;Nuno Theme
+  			</div>
+  		</footer>
  	</div>
 	  	<!-- end of Contact section -->
 
