--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/fixed.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
  </head>
- <body data-spy="scroll" data-target="#navbarResponsive" data-offset="1">
+ <body data-spy="scroll" data-target="#navbarResponsive" data-offset="20">
 
  	<!-- start home section -->
  	<div id="home">
@@ -21,23 +21,23 @@
  			<div id="navbarResponssive" class="collapse navbar-collapse">
  				<ul class="navbar-nav ml-auto">
  					<li class="nav-item">
- 						<a href="#" class="nav-link">HOME</a>
+ 						<a href="#home active" class="nav-link">HOME</a>
  					</li>
  					<li class="nav-item">
- 						<a href="#" class="nav-link">COURSE</a>
+ 						<a href="#course" class="nav-link">COURSE</a>
  					</li>
  					<li class="nav-item">
- 						<a href="#" class="nav-link">FEATURES</a>
+ 						<a href="#features" class="nav-link">FEATURES</a>
  					</li>
 
  					<li class="nav-item">
- 						<a href="#" class="nav-link">RESOURCES</a>
+ 						<a href="#resources" class="nav-link">RESOURCES</a>
  					</li>
  					<li class="nav-item">
- 						<a href="#" class="nav-link">CLIENTS</a>
+ 						<a href="#clients" class="nav-link">CLIENTS</a>
  					</li>
  					<li class="nav-item">
- 						<a href="#" class="nav-link">CONTACT</a>
+ 						<a href="#contact" class="nav-link">CONTACT</a>
  					</li>
  				</ul>
  			</div>
