--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<title>Nuno - Responsive Bootstrap THeme</title>
 	<link rel="stylesheet" type="text/css" href="css/fixed.css">
@@ -13,15 +14,15 @@
  	<!-- start home section -->
  	<div id="home">
  		<!-- Navigation -->
- 		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+ 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
  			<a href="#" class="navbar-brand"><img src="img/nuno.png"></a>
  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
  				<span class="navbar-toggler-icon"></span>
  			</button>
- 			<div id="navbarResponssive" class="collapse navbar-collapse">
+ 			<div id="navbarResponsive" class="collapse navbar-collapse">
  				<ul class="navbar-nav ml-auto">
  					<li class="nav-item">
- 						<a href="#home active" class="nav-link">HOME</a>
+ 						<a href="#home" class="nav-link active ">HOME</a>
  					</li>
  					<li class="nav-item">
  						<a href="#course" class="nav-link">COURSE</a>
